fix: fix vertical-align in CSS

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
 	border: 0;
 	margin: 0;
 	padding: 0;
-	vertical-align: baseline;
 	display: block;
 	background: #cf8a05;
 	font-family: 'Lato', helvetica, arial, sans-serif;
